fix: overflow-y auto

--- a/public/assets/css/module.css
+++ b/public/assets/css/module.css
@@ -8,7 +8,7 @@
 #module {
   height: 100%;
   width: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 #gravatar {
